# send-extrinsic-rpc

./: Cargo.toml  LICENSE  README.md  metadata.scale
src/utils/: lib.rs  rpc_to_localhost.rs  tx_manager.rs
